Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- supports opendocument OOo 2.x file format
(xslt contributed by TARDELLI Maurice - CERTU/SYS/ITS" <Maurice.Tardelli@equipement.gouv.fr>)

Bug fixes:
~~~~~~~~~~
- 
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-